--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "file-type": "^7.7.1",
-    "readable-stream": "^2.2.2"
+    "readable-stream": "^3.0.6"
   },
   "devDependencies": {
-    "hasha": "^2.2.0",
+    "hasha": "^3.0.0",
     "mocha": "^5.2.0",
     "standard": "^12.0.1"
+  },
+  "engines": {
+    "node": ">=6"
   }
 }
