--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "index.js"
   ],
   "dependencies": {
-    "file-type": "^12.0.0",
-    "readable-stream": "^3.0.6"
+    "file-type": "^12.0.0"
   },
   "devDependencies": {
     "hasha": "^3.0.0",
@@ -20,6 +19,6 @@
     "standard": "^12.0.1"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=10.13"
   }
 }
