--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.5.0",
   "license": "MIT",
   "repository": "LinusU/stream-file-type",
+  "type": "module",
+  "exports": "./index.js",
   "scripts": {
     "test": "standard && mocha"
   },
@@ -11,14 +13,14 @@
     "index.js"
   ],
   "dependencies": {
-    "file-type": "^14.1.4"
+    "file-type": "^16.0.0"
   },
   "devDependencies": {
-    "hasha": "^5.2.0",
-    "mocha": "^7.1.1",
-    "standard": "^14.3.3"
+    "hasha": "^5.2.2",
+    "mocha": "^9.0.2",
+    "standard": "^16.0.3"
   },
   "engines": {
-    "node": ">=10.13"
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   }
 }
